# axum-forum

./: .env  .gitignore  Cargo.toml  readme.md
assets/: index.html
assets/css/: app.css
assets/js/: app.js  tw.js
migrations/: 20250907062045_users_table.sql  20250907062052_posts_table.sql  20250907145449_users_tz_alter.sql  20250908005805_posts_tz_alter.sql
src/: main.rs  router.rs  utils.rs
src/handlers/: mod.rs  posts_handler.rs  users_handler.rs
src/models/: form.rs  mod.rs  post.rs  template.rs  user.rs
templates/layouts/: guest_layout.html  user_layout.html
templates/pages/: create-post.html  edit-post.html  home.html  login.html  register.html  show-post.html
templates/partials/: messages.html  nav.html  register.html
templates/partials/icons/: exit-icon.html  user-icon.html
