[package]
name = "axum-forum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "chrono"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
