[package]
name = "axum-forum"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
axum-messages = "0.8.0"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "chrono"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
