[package]
name = "axum-forum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
axum-messages = "0.8.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
password-auth = "1.0.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "chrono"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
validator = { version = "0.20.0", features = ["derive"] }
